--- a/portfolio.html
+++ b/portfolio.html
@@ -12,47 +12,48 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <style>
-      body {
-        font-family: "Roboto", sans-serif;
-      }
-    </style>
   </head>
   <body>
     <header>
       <div class="container">
-        <div class="wrapper">
-          <a href="/webstudio.html" class="logo"
-            ><span class="web">Web</span>Studio</a
+        <div class="container__wrapper">
+          <a href="/webstudio.html" class="header-logo"
+            ><span class="header-logo__hightlight">Web</span>Studio</a
           >
-          <nav class="nav-list">
-            <menu class="menu-nav">
+          <nav class="navigation">
+            <menu class="navigation__menu">
               <li><a href="./index.html">Agencja</a></li>
               <li>
                 <a href="">Portfolio</a>
-                <div class="underscore-portfolio"></div>
+                <div class="navigation__item-underscore"></div>
               </li>
               <li><a href="">Kontakt</a></li>
             </menu>
           </nav>
           <div class="header-contact">
-            <div class="contact-mail">
-              <a class="contact" href="mailto:info@devstudio.com"
-                ><svg class="envelope-icon" width="16px" height="12px">
-                  <use href="./images/icons.svg#icon-envelope"></use>
-                </svg>
-                info@devstudio.com</a
+            <a class="header-contact__link" href="mailto:info@devstudio.com"
+              ><svg
+                class="header-contact__envelope-icon"
+                width="16px"
+                height="12px"
               >
-            </div>
-            <a class="contact" href="tel:+48111111111">
-              <svg class="smartphone-icon" width="10px" height="16px">
+                <use href="./images/icons.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
+            >
+            <a class="header-contact__link" href="tel:+48111111111">
+              <svg
+                class="header-contact__smartphone-icon"
+                width="10px"
+                height="16px"
+              >
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +48 111 111 111
@@ -66,30 +67,40 @@
       <section>
         <ul class="portfolio-button">
           <li>
-            <button class="button-options" type="button">Wszystkie</button>
+            <button class="portfolio-button__button" type="button">
+              Wszystkie
+            </button>
           </li>
           <li>
-            <button class="button-options" type="button">Strony</button>
+            <button class="portfolio-button__button" type="button">
+              Strony
+            </button>
           </li>
           <li>
-            <button class="button-options" type="button">Aplikacje</button>
+            <button class="portfolio-button__button" type="button">
+              Aplikacje
+            </button>
           </li>
           <li>
-            <button class="button-options" type="button">Dizajn</button>
+            <button class="portfolio-button__button" type="button">
+              Dizajn
+            </button>
           </li>
           <li>
-            <button class="button-options" type="button">Marketing</button>
+            <button class="portfolio-button__button" type="button">
+              Marketing
+            </button>
           </li>
         </ul>
 
         <div class="container">
-          <ul class="portfolio-image">
+          <ul class="portfolio-product">
             <li>
-              <figure class="figure-border">
-                <div class="section-technocrack">
-                  <div class="img-animation">
-                    <div class="technocrack-overlay">
-                      <p class="technocrack-text">
+              <figure class="portfolio-product__border">
+                <div class="portfolio-product__container">
+                  <div class="portfolio-product__animation">
+                    <div class="portfolio-product__overlay">
+                      <p class="portfolio-product__description">
                         Technocrack jest popularną platformą wykorzystywaną do
                         rozpowszechniania koronawirusa. Firmy wykorzystują tę
                         platformę do celów szpiegowskich i ataków na
@@ -104,18 +115,18 @@
                     />
                   </div>
                   <figcaption>
-                    <p class="figcaption-name">Technocrack</p>
-                    <p class="figcaption-subname">Strona internetowa</p>
+                    <p class="portfolio-product__title">Technocrack</p>
+                    <p class="portfolio-product__text">Strona internetowa</p>
                   </figcaption>
                 </div>
               </figure>
             </li>
             <li>
-              <figure class="figure-border">
-                <div class="section-technocrack">
-                  <div class="img-animation">
-                    <div class="technocrack-overlay">
-                      <p class="technocrack-text">
+              <figure class="portfolio-product__border">
+                <div class="portfolio-product__container">
+                  <div class="portfolio-product__animation">
+                    <div class="portfolio-product__overlay">
+                      <p class="portfolio-product__description">
                         Technocrack jest popularną platformą wykorzystywaną do
                         rozpowszechniania koronawirusa. Firmy wykorzystują tę
                         platformę do celów szpiegowskich i ataków na
@@ -131,20 +142,20 @@
                   </div>
 
                   <figcaption>
-                    <p class="figcaption-name">
+                    <p class="portfolio-product__title">
                       Grafika New Orlean vs Golden Star
                     </p>
-                    <p class="figcaption-subname">Dizajn</p>
+                    <p class="portfolio-product__text">Dizajn</p>
                   </figcaption>
                 </div>
               </figure>
             </li>
             <li>
-              <figure class="figure-border">
-                <div class="section-technocrack">
-                  <div class="img-animation">
-                    <div class="technocrack-overlay">
-                      <p class="technocrack-text">
+              <figure class="portfolio-product__border">
+                <div class="portfolio-product__container">
+                  <div class="portfolio-product__animation">
+                    <div class="portfolio-product__overlay">
+                      <p class="portfolio-product__description">
                         Technocrack jest popularną platformą wykorzystywaną do
                         rozpowszechniania koronawirusa. Firmy wykorzystują tę
                         platformę do celów szpiegowskich i ataków na
@@ -159,18 +170,18 @@
                     />
                   </div>
                   <figcaption>
-                    <p class="figcaption-name">Restauracja Seafood</p>
-                    <p class="figcaption-subname">Aplikacja</p>
+                    <p class="portfolio-product__title">Restauracja Seafood</p>
+                    <p class="portfolio-product__text">Aplikacja</p>
                   </figcaption>
                 </div>
               </figure>
             </li>
             <li>
-              <figure class="figure-border">
-                <div class="section-technocrack">
-                  <div class="img-animation">
-                    <div class="technocrack-overlay">
-                      <p class="technocrack-text">
+              <figure class="portfolio-product__border">
+                <div class="portfolio-product__container">
+                  <div class="portfolio-product__animation">
+                    <div class="portfolio-product__overlay">
+                      <p class="portfolio-product__description">
                         Technocrack jest popularną platformą wykorzystywaną do
                         rozpowszechniania koronawirusa. Firmy wykorzystują tę
                         platformę do celów szpiegowskich i ataków na
@@ -186,18 +197,18 @@
                   </div>
 
                   <figcaption>
-                    <p class="figcaption-name">Projekt Prime</p>
-                    <p class="figcaption-subname">Marketing</p>
+                    <p class="portfolio-product__title">Projekt Prime</p>
+                    <p class="portfolio-product__text">Marketing</p>
                   </figcaption>
                 </div>
               </figure>
             </li>
             <li>
-              <figure class="figure-border">
-                <div class="section-technocrack">
-                  <div class="img-animation">
-                    <div class="technocrack-overlay">
-                      <p class="technocrack-text">
+              <figure class="portfolio-product__border">
+                <div class="portfolio-product__container">
+                  <div class="portfolio-product__animation">
+                    <div class="portfolio-product__overlay">
+                      <p class="portfolio-product__description">
                         Technocrack jest popularną platformą wykorzystywaną do
                         rozpowszechniania koronawirusa. Firmy wykorzystują tę
                         platformę do celów szpiegowskich i ataków na
@@ -213,18 +224,18 @@
                   </div>
 
                   <figcaption>
-                    <p class="figcaption-name">Projekt Boxes</p>
-                    <p class="figcaption-subname">Aplikacja</p>
+                    <p class="portfolio-product__title">Projekt Boxes</p>
+                    <p class="portfolio-product__text">Aplikacja</p>
                   </figcaption>
                 </div>
               </figure>
             </li>
             <li>
-              <figure class="figure-border">
-                <div class="section-technocrack">
-                  <div class="img-animation">
-                    <div class="technocrack-overlay">
-                      <p class="technocrack-text">
+              <figure class="portfolio-product__border">
+                <div class="portfolio-product__container">
+                  <div class="portfolio-product__animation">
+                    <div class="portfolio-product__overlay">
+                      <p class="portfolio-product__description">
                         Technocrack jest popularną platformą wykorzystywaną do
                         rozpowszechniania koronawirusa. Firmy wykorzystują tę
                         platformę do celów szpiegowskich i ataków na
@@ -239,18 +250,20 @@
                     />
                   </div>
                   <figcaption>
-                    <p class="figcaption-name">Inspiration has no Borders</p>
-                    <p class="figcaption-subname">Strona internetowa</p>
+                    <p class="portfolio-product__title">
+                      Inspiration has no Borders
+                    </p>
+                    <p class="portfolio-product__text">Strona internetowa</p>
                   </figcaption>
                 </div>
               </figure>
             </li>
             <li>
-              <figure class="figure-border">
-                <div class="section-technocrack">
-                  <div class="img-animation">
-                    <div class="technocrack-overlay">
-                      <p class="technocrack-text">
+              <figure class="portfolio-product__border">
+                <div class="portfolio-product__container">
+                  <div class="portfolio-product__animation">
+                    <div class="portfolio-product__overlay">
+                      <p class="portfolio-product__description">
                         Technocrack jest popularną platformą wykorzystywaną do
                         rozpowszechniania koronawirusa. Firmy wykorzystują tę
                         platformę do celów szpiegowskich i ataków na
@@ -265,18 +278,20 @@
                     />
                   </div>
                   <figcaption>
-                    <p class="figcaption-name">Magazyn Limited Edition</p>
-                    <p class="figcaption-subname">Dizajn</p>
+                    <p class="portfolio-product__title">
+                      Magazyn Limited Edition
+                    </p>
+                    <p class="portfolio-product__text">Dizajn</p>
                   </figcaption>
                 </div>
               </figure>
             </li>
             <li>
-              <figure class="figure-border">
-                <div class="section-technocrack">
-                  <div class="img-animation">
-                    <div class="technocrack-overlay">
-                      <p class="technocrack-text">
+              <figure class="portfolio-product__border">
+                <div class="portfolio-product__container">
+                  <div class="portfolio-product__animation">
+                    <div class="portfolio-product__overlay">
+                      <p class="portfolio-product__description">
                         Technocrack jest popularną platformą wykorzystywaną do
                         rozpowszechniania koronawirusa. Firmy wykorzystują tę
                         platformę do celów szpiegowskich i ataków na
@@ -291,18 +306,18 @@
                     />
                   </div>
                   <figcaption>
-                    <p class="figcaption-name">Projekt LAB</p>
-                    <p class="figcaption-subname">Marketing</p>
+                    <p class="portfolio-product__title">Projekt LAB</p>
+                    <p class="portfolio-product__text">Marketing</p>
                   </figcaption>
                 </div>
               </figure>
             </li>
             <li>
-              <figure class="figure-border">
-                <div class="section-technocrack">
-                  <div class="img-animation">
-                    <div class="technocrack-overlay">
-                      <p class="technocrack-text">
+              <figure class="portfolio-product__border">
+                <div class="portfolio-product__container">
+                  <div class="portfolio-product__animation">
+                    <div class="portfolio-product__overlay">
+                      <p class="portfolio-product__description">
                         Technocrack jest popularną platformą wykorzystywaną do
                         rozpowszechniania koronawirusa. Firmy wykorzystują tę
                         platformę do celów szpiegowskich i ataków na
@@ -317,8 +332,8 @@
                     />
                   </div>
                   <figcaption>
-                    <p class="figcaption-name">Growing Business</p>
-                    <p class="figcaption-subname">Aplikacja</p>
+                    <p class="portfolio-product__title">Growing Business</p>
+                    <p class="portfolio-product__text">Aplikacja</p>
                   </figcaption>
                 </div>
               </figure>
@@ -328,68 +343,74 @@
       </section>
     </main>
 
-    <footer class="last-section">
+    <footer class="page-footer">
       <div class="container">
-        <div class="two-blocks">
-          <div class="footer-address">
-            <a href="/webstudio.html" class="logo-footer"
-              ><span class="web">Web</span>Studio</a
+        <div class="page-footer__blocks">
+          <div class="page-footer__grid">
+            <a href="/webstudio.html" class="page-footer__link"
+              ><span class="page-footer__hightlight">Web</span>Studio</a
             >
-            <div class="link-footer">
-              <address class="street">
+            <div class="page-footer__address">
+              <address class="page-footer__street">
                 m. Warszawa, Aleje Jerozolimskie 21
               </address>
-              <address class="address-footer">
-                <a class="mail-footer" href="mailto:info@devstudio.com"
+              <address class="page-footer__contact">
+                <a class="page-footer__mail" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
                 >
                 <a href="tel:+48111111111">+48 111 111 111</a>
               </address>
             </div>
           </div>
-          <div class="social-icon-footer">
-            <h5 class="join-us">DOŁĄCZ DO NAS</h5>
-            <ul class="footer-list-icon">
-              <li class="icon-group-footer">
+          <div class="socialmedia-footer">
+            <h5 class="socialmedia-footer__title">DOŁĄCZ DO NAS</h5>
+            <ul class="socialmedia-footer__list">
+              <li class="socialmedia-footer__item">
                 <a href="#">
-                  <svg class="footer-icon-item" width="20" height="20">
+                  <svg class="socialmedia-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-instagram2"></use>
                   </svg>
                 </a>
               </li>
-              <li class="icon-group-footer">
+              <li class="socialmedia-footer__item">
                 <a href="#">
-                  <svg class="footer-icon-item" width="20" height="20">
+                  <svg class="socialmedia-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-twitter1"></use>
                   </svg>
                 </a>
               </li>
-              <li class="icon-group-footer">
+              <li class="socialmedia-footer__item">
                 <a href="#">
-                  <svg class="footer-icon-item" width="20" height="20">
+                  <svg class="socialmedia-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-facebook1"></use>
                   </svg>
                 </a>
               </li>
-              <li class="icon-group-footer">
+              <li class="socialmedia-footer__item">
                 <a href="#">
-                  <svg class="footer-icon-item" width="20" height="20">
+                  <svg class="socialmedia-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-linkedin1"></use>
                   </svg>
                 </a>
               </li>
             </ul>
           </div>
+
           <div class="newsletter">
-            <h5 class="news-text">ZAPISZ SIĘ DO NEWSLETTERA</h5>
-            <div class="email-button">
+            <h5 class="newsletter__text">ZAPISZ SIĘ DO NEWSLETTERA</h5>
+            <div class="newsletter__grid">
               <input
-                class="input-email"
+                class="newsletter__input"
                 type="email"
                 name="email"
                 placeholder="E-mail"
               />
-              <button class="news-button" type="submit">Zapisz się</button>
+              <button class="newsletter__button" type="submit">
+                Zapisz się
+                <svg class="newsletter__icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-email-black-2"></use>
+                </svg>
+              </button>
             </div>
           </div>
         </div>
