--- a/index.html
+++ b/index.html
@@ -30,11 +30,15 @@
           <nav class="navigation">
             <menu class="navigation__menu">
               <li>
-                <a href="">Agencja</a>
+                <a class="navigation__link" href="">Agencja</a>
                 <div class="navigation__item-underscore"></div>
               </li>
-              <li><a href="./portfolio.html">Portfolio</a></li>
-              <li><a href="">Kontakt</a></li>
+              <li>
+                <a class="navigation__link" href="./portfolio.html"
+                  >Portfolio</a
+                >
+              </li>
+              <li><a class="navigation__link" href="">Kontakt</a></li>
             </menu>
           </nav>
           <div class="header-contact">
