--- a/portfolio.html
+++ b/portfolio.html
@@ -29,12 +29,14 @@
           >
           <nav class="navigation">
             <menu class="navigation__menu">
-              <li><a href="./index.html">Agencja</a></li>
               <li>
-                <a href="">Portfolio</a>
-                <div class="navigation__item-underscore"></div>
+                <a class="navigation__link" href="./index.html">Agencja</a>
               </li>
-              <li><a href="">Kontakt</a></li>
+              <li>
+                <a class="navigation__link" href="">Portfolio</a>
+                <div class="navigation__item-underscore--current"></div>
+              </li>
+              <li><a class="navigation__link" href="">Kontakt</a></li>
             </menu>
           </nav>
           <div class="header-contact">
