--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </header>
 
     <main>
-      <div class="section-container">
+      <section class="section-container">
         <div class="section-grid">
           <h1 class="header-title">
             EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU
@@ -79,7 +79,7 @@
             </button>
           </div>
         </div>
-      </div>
+      </section>
 
       <section>
         <div class="container">
