--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
     </header>
 
     <main>
-      <section class="section-container">
-        <div class="section-grid">
-          <h1 class="header-title">
+      <section class="section-hero">
+        <div class="section-hero__container">
+          <h1 class="section-hero__title">
             EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU
           </h1>
-          <div class="main-button">
-            <button class="main-button__button" type="button" data-modal-open>
+          <div class="section-hero__grid-button">
+            <button class="section-hero__button" type="button" data-modal-open>
               Zamów usługe
             </button>
           </div>
